@@ -1,6 +1,7 @@
 package io.helidon.benchmark.services;
 
 import java.util.Collections;
+import java.util.Map;
 
 import javax.json.Json;
 import javax.json.JsonBuilderFactory;
@@ -10,7 +11,10 @@ import io.helidon.webserver.Service;
 
 public class JsonService implements Service {
 
-    private JsonBuilderFactory jsonBuilderFactory;
+    private static final String ATTR_NAME = "message";
+    private static final String ATTR_VALUE = "Hello, World!";
+
+    private final JsonBuilderFactory jsonBuilderFactory;
 
      public JsonService() {
          this.jsonBuilderFactory = Json.createBuilderFactory(Collections.emptyMap());
@@ -18,7 +22,6 @@ public class JsonService implements Service {
 
     @Override
     public void update(Routing.Rules rules) {
-        rules.get("/json",
-                (req, res) -> res.send(jsonBuilderFactory.createObjectBuilder(Collections.singletonMap("message", "Hello, World!")).build()));
+        rules.get("/json", (req, res) -> res.send(jsonBuilderFactory.createObjectBuilder(Map.of(ATTR_NAME, ATTR_VALUE)).build()));
     }
 }
